# taksample

./: CMakeLists.txt  README  buildrun.sh  bundle_linux.sh  main.cpp  mygame.cpp  mygame.h  premake4.lua
media/shaders/: default.frag  default.vert  nolight.frag  nolight.vert  red.frag  red.vert
